--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ td {
     border-radius: 25px;
     text-align: center;
     font-size: 30px;
-    
+    box-shadow: 10px 10px;
+    cursor: pointer;
+    background-color: white;
+      
 }
 
 td:hover {
@@ -24,13 +27,18 @@ table {
 
 }
 
-p {
+#title {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(54, 6, 54);
     font-weight: bold;
     text-decoration: underline;
     text-align: center;
-    font-size: xx-large
+    font-size: xx-large;
+    
+}
+
+.wins {
+    text-align: center;
 }
 
 .x {
